# snipped-string-theory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_new.yml  ci_old.yml
src/: allure-md.py
src/spiral_unification/: core.py
tests/: conftest.py  test_sympy_physics.py  test_unification.py  test_wolfram_query.py
